<resources>
    <string name="app_name">Points App</string>

    <string name="title_home">Home</string>
    <string name="title_companies">Companies</string>
    <string name="title_withdraw">Withdraw</string>
    <string name="title_wallet_balance">Wallet balance</string>


    <string name="label_sell_gift_card">Sell gift Card</string>
    <string name="label_hi_rate_cards">Hi rate cards</string>
    <string name="label_today_deals">Today\'s deals</string>
    <string name="label_bonus">Bonus</string>
    <string name="label_five_percent">+ 5%</string>
    <string name="label_payoneer">Payoneer</string>
    <string name="label_paypal">paypal</string>
    <string name="label_play_store">play store</string>
    <string name="label_apple">Apple</string>
    <string name="label_steam">Steam</string>

    <string name="tab_withdrawing">Withdrawing</string>
    <string name="tab_transactions">Previous Transaction</string>

    <string name="hint_hi_rate_cards">See which cards are high now</string>
    <string name="hint_today_deals">Get sweet bonus on trades</string>

    <string name="hint_apexpay">Get started with apexpay</string>

    <string name="subtitle_home">Hello, embrace the struggle.</string>
    <string name="subtitle_withdraw">Choose withdrawal method.</string>
    <string name="subtitle_companies">Choose the type of company.</string>

    <string name="btn_withdraw">Withdraw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>