<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WithdrawFragment"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- top header container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/paddingStandard"
            android:paddingEnd="@dimen/paddingStandard"
            android:paddingTop="30dp"
            android:orientation="vertical"
            android:background="@drawable/home_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_withdraw"
                android:textSize="@dimen/txtSizeTitle"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_withdraw"
                android:textSize="@dimen/txtSizeStandard"
                android:textColor="@color/white"/>
        </LinearLayout>

        <!-- padding start end vertical container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/paddingStandard"
            android:paddingEnd="@dimen/paddingStandard"
            android:layout_marginTop="-16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_card_dark">

                <TextView
                    android:id="@+id/tab_withdrawing"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@drawable/bg_tab_left"
                    android:text="@string/tab_withdrawing"/>

                <TextView
                    android:id="@+id/tab_transactions"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/tab_transactions"/>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_marginTop="@dimen/paddingStandard"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include layout="@layout/fragment_withdraw_methods" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>